-Start of mobile friendly design -Removed min width on 1250px -Bugs - About Section does not fit correctly

--- a/Template/src/sass/_main-grid.sass
+++ b/Template/src/sass/_main-grid.sass
@@ -1,7 +1,11 @@
 /* Project Selection Grid */
 #blocks-wrapper
-  overflow: hidden
+  //overflow: hidden
   margin: 0 0 0 0 !important
+
+@media (min-width: 768px) and (max-width: 1023px)
+  *
+    font-size: 21px
 
 .project
   background: $bg-color
